<resources>
    <string name="app_id">1476365265989827</string>
    <string name="app_name">CyclingMap</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">Cycling Map</string>
    <string name="title_activity_login">Login</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="plus_sign_out">Switch Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_gps">GPSActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="time_trace">time</string>
    <string name="distance_Total_t">Distance (Km)</string>
    <string name="speed_avg_t">Speed (Km/h)</string>
    <!-- Login and Register labels  -->
    <string name="user_label">Username</string>
    <string name="pass_label">Password</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="email_label">Email</string>
    <string name="create_user_label">Create Account</string>
    <string name="login_label">Log In</string>
    <string name="register_label">Sign Up </string>
    <string name="title_activity_register">Register</string>
    <string name="register_message">Sign Up</string>
    <string name="login_fb_text">Facebook</string>
    <string name="input_pass">Please Enter Password</string>
    <string name="input_username">Please enter your name</string>
    <string name="invalid_email">Invalid email</string>
<<<<<<< HEAD



    <string name="register_error">Error in Register</string>

=======
    <string name="register_error">Error in Register</string>
>>>>>>> origin/master
    <!-- End -->
    <!-- Drawer -->
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="title_principal">Main</string>
    <string name="title_routes">Route</string>
    <string name="title_friends">Friends</string>
    <string name="title_groups">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_user_routes">UserRoutes</string>
    <string name="empty_list">No routes</string>
    <string name="title_activity_end_trace">EndTraceActivity</string>
    <string name="home_title">Home</string>
    <string name="profile_title">My Profile</string>
    <string name="route_title">My Routes</string>
    <string name="challenge_title">Challenges</string>
    <string name="others_titles">Others</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="settings_title">Settings</string>
    <!-- Final trace -->
    <string name="distance_Total">Distance</string>
    <string name="time_Total">Duration</string>
    <string name="time_total_final">Duration</string>
    <string name="speed_avg">Speed</string>
    <string name="share_public">Public</string>
    <string name="difficulty_l">Level</string>
    <string name="saving_route">Save</string>
    <!-- End -->
    <!-- lay_Principal -->
    <string name="distance_user_total">Traveled kilometers</string>
    <string name="max_speed">Best speed</string>
    <string name="experience_level">Experience level</string>
    <string name="total_routes">Total traveled routes</string>

    <string name="add_route">Add route</string>
    <string name="search_route">Search route</string>
    <string name="title_activity_profile_user">Profile</string>
    <!-- end lay -->
    <!-- Profile -->
    <string name="name_user">Username</string>
    <string name="pass_user">Password</string>
    <string name="email_user">Email</string>
    <string name="weight_user">Weight</string>
    <string name="height_user">Height</string>
    <string name="configuration">Configuration</string>
    <string name="user_features_head">User information</string>
    <string name="user_features_weight">Weight</string>
    <string name="user_features_height">Height</string>
    <string name="user_features_level">Level</string>
    <string name="user_features_btnsave">Save</string>
    <!-- End -->
    <string name="title_activity_buscar_rutas">Search route</string>
    <string name="btnRutas_lista_buscar">Accept</string>
    <string name="btn_rutas_buscar_lblboton">Search</string>
    <string name="title_activity_detalles_ruta">Route details</string>
    <string name="detalle_ruta_Encabezado">Route details</string>
    <!-- Rutas activity -->
    <string name="rutas_activity_lbltiempo">TIME (s)</string>
    <string name="ruta_activity_lbldistancia">DISTANCE</string>
    <string name="ruta_activity_lbldistanprome">SPEED AVERAGE</string>
    <string name="title_activity_rutas">Add route</string>
    <string name="rutas_btn_showmap">MAP</string>
    <string name="rutas_btn_iniciar">START</string>
    <string name="rutas_btn_stop">STOP</string>
    <string name="rutas_btn_verruta">SEE ROUTE</string>
    <string name="title_activity_user_features">Users</string>
    <string name="title_activity_rutas_buscar">Routes</string>
    <string name="title_activity_finded_routes">Routes</string>
    <string name="detalles_tipocalle">Kind of route:</string>
    <string name="detalles_popu">Popularity:</string>
    <string name="detalles_nivel">Level</string>
    <string name="busqueda_head">Search options</string>
    <string name="btn_ruta_detalle">BEGIN</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_settings">Settings</string>
    <string name="ruta_finded_head">Found route</string>
    <string name="ruta_finded_btnsee">SEE ROUTE</string>
    <string name="near_of_me">Nearby routes</string>
    <string name="detalles_distancia">Distance</string>
    <string name="title_activity_retos">Challenges</string>
    <string name="title_activity_prueba">PruebaActivity</string>
    <string name="title_activity_first">FirstActivity</string>
    <!-- End -->
    <!-- Existing route -->
    <string name="distance_existing">Distance</string>
    <string name="route_name">Route</string>
    <string name="route_level">Level</string>
    <string name="start_route">Start</string>
    <!-- End -->
    <!-- Retos activity -->
    <string name="head_activity_retos">Challenges list</string>
    <string name="retos_tittle_activity">Challenges list</string>
    <!-- End -->
    <!-- Badge -->
    <string name="action_badge">Badge</string>
    <string name="action_badge_label">Notification</string>
    <string name="title_activity_existing_route">ExistingRoute</string>
    <!-- End -->
    <!-- Buscar Rutas -->
    <string name="beginner_level">Beginner</string>
    <string name="intermediate_level">Intermediate</string>
    <string name="advanced_level">Advanced</string>
    <!-- End -->
    <!-- Finded Routes -->
    <string name="find_route_title">Finded Routes</string>
    <string name="find_dist">Distance</string>
    <string name="find_speed">Speed</string>
    <string name="find_level">Level</string>
    <!-- End -->
    <!-- Detalles ruta -->
    <string name="place_route">Place</string>
    <string name="distance_det_r">Distance</string>
    <string name="duration_det">Duration</string>
    <string name="level_det_r">Level</string>
    <!-- End -->
    <!-- user route -->
    <string name="routes_user">Route</string>
    <string name="route_duration">Duration</string>
    <!-- end -->
    <!-- load progress dialog -->
    <string name="loading_dialog">Loading...</string>
    <!-- end -->
    <!-- Facebook message -->
    <string name="fb_cancel">Attempt canceled</string>
    <string name="fb_error">Failed attempt</string>
    <string name="title_activity_trace_route">TraceRouteActivity</string>
    <!-- end -->
    <!-- dialogs for active GPS and Report connection unable -->
    <string name="dialog_title">Location Services not Active</string>
    <string name="dialog_message">Please enable Location Services and GPS</string>
    <string name="connection_title">ERROR</string>
    <string name="connection_msg">An unknown network error has ocurred</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="title_close">Close Session</string>
    <string name="title_message_close">Are you sure?</string>
    <string name="yes_option">Yes</string>
    <string name="no_option">No</string>
    <!-- end -->
    <string name="distance_list">Distance </string>
</resources>
