<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/item_navigation_drawer_home"
            android:icon="@drawable/ic_home_dr"
            android:title="@string/home_title" />
        <item
            android:id="@+id/item_navigation_drawer_profile"
            android:icon="@drawable/ic_profile_dr"
            android:title="@string/profile_title" />
        <item
            android:id="@+id/item_navigation_drawer_routes"
            android:icon="@drawable/ic_route_dr"
            android:title="@string/route_title" />
        <item
            android:id="@+id/item_navigation_drawer_challenge"
            android:icon="@drawable/ic_challenge_dr"
            android:title="@string/challenge_title" />
    </group>
    <item android:title="@string/others_titles">
        <menu>
            <item
                android:id="@+id/item_navigation_drawer_help_and_feedback"
                android:title="@string/sign_out_title"
                android:icon="@drawable/ic_sign_out"
                />

        </menu>
    </item>

</menu>