<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenLight"
    android:gravity="center"
    android:orientation="horizontal">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="1"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:rowCount="5">

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_column="0"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="50dp"
            android:layout_row="0"
            android:background="#ffffffff"
            android:hint="@string/email_label"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#757575"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/txtuserna"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_column="0"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="18dp"
            android:layout_row="1"
            android:background="#ffffffff"
            android:hint="@string/user_label"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#757575"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/txtpass"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_column="0"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="18dp"
            android:layout_row="2"
            android:background="#ffffffff"
            android:hint="@string/pass_label"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#757575"
            android:textColorHint="#757575" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_marginBottom="38dp"
            android:layout_marginTop="35dp"
            android:layout_row="3"
            android:background="@color/colorPrimaryDark"
            android:text="@string/create_user_label"
            android:textColor="@color/textColorPrimary"
            android:textStyle="bold" />

    </GridLayout>


</LinearLayout>