<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/greenLight"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="center"
        android:src="@drawable/cycling"/>
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="4"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:rowCount="16"
        tools:context=".LogActivity">
        <EditText
            android:id="@+id/TxtUsername"
            android:layout_width="55dp"
            android:layout_height="45dp"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="@dimen/bottom_view_log"
            android:layout_marginTop="@dimen/top_margin_log"
            android:layout_row="0"
            android:background="#ffffffff"
            android:hint="@string/user_label"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#757575"
            android:textColorHint="#757575" />
        <EditText
            android:id="@+id/TxtPassword"
            android:layout_width="55dp"
            android:layout_height="45dp"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="@dimen/top_margin_textview_log"
            android:layout_row="1"
            android:background="#ffffffff"
            android:hint="@string/pass_label"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#757575"
            android:textColorHint="#757575"
            android:layout_marginBottom="@dimen/bottom_view_log" />
        <Button
            android:id="@+id/BtnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="@dimen/top_margin_textview_log"
            android:layout_row="2"
            android:background="@color/greenDark"
            android:onClick="validarUsuario"
            android:text="@string/login_label"
            android:textColor="@color/textColorPrimary" />
        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnGP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:text="r"
            android:layout_marginTop="@dimen/top_margin_textview_log" />
        <Button
            android:id="@+id/Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="@dimen/top_margin_textview_log"
            android:layout_row="6"
            android:onClick="registerNew"
            android:text="@string/register_message"
            android:textColor="@color/textColorPrimary"
            android:background="@color/greenDark" />
    </GridLayout>
</FrameLayout>