<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context="com.cyclingmap.orion.cyclingmap.activities.BuscarRutas">


    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabla1">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/busqueda_head"
                android:id="@+id/txtRut_Buscar_Enca"
                android:layout_marginBottom="10dp"
                android:height="40dp"
                android:textSize="20dp"
                android:layout_marginTop="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/imageView"
                    android:src="@mipmap/ic_distanc"
                    android:layout_marginLeft="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detalles_distancia"
                    android:id="@+id/textView5"
                    android:layout_marginTop="10dp"
                    android:textSize="@dimen/lbl_text_size" />

                <EditText
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/txt_Distance"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp" />

            </LinearLayout>

        </TableRow>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView1"
                    android:src="@mipmap/ic_level_exp"
                    android:layout_marginLeft="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detalles_nivel"
                    android:id="@+id/txt"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="@dimen/lbl_text_size" />
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerLevel"
                    android:spinnerMode="dropdown"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:touchscreenBlocksFocus="true" />


            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/near_of_me"
                    android:id="@+id/check_near"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom ="@id/tabla1"
        android:gravity="center"
        android:id="@+id/linearLayout7">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_rutas_buscar_lblboton"
            android:background="@color/greenDark"
            android:id="@+id/btnRutas_Buscar"
            android:textColor="#ffffffff"
            android:onClick="search_Route"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>
