<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/windowBackground"
    tools:context="com.cyclingmap.orion.cyclingmap.activities.RutasActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/linearLayout2"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/linearLayout3"
        android:layout_alignEnd="@+id/linearLayout3"
        android:layout_marginRight="17dp"
        android:layout_marginEnd="17dp">

        <Chronometer
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chrono"
            android:textAlignment="center"
            android:textIsSelectable="true"
            android:textSize="60sp" />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/rutas_activity_lbltiempo"
            android:id="@+id/lblRutasTiempo"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout4"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="56dp"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0.0"
            android:id="@+id/txtRutaskm"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="km"
            android:id="@+id/lblRtuasKm" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ruta_activity_lbldistancia"
        android:id="@+id/lblRutasDistancia"
        android:textSize="15sp"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignRight="@+id/linearLayout4"
        android:layout_alignEnd="@+id/linearLayout4" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout5"
        android:layout_alignTop="@+id/linearLayout4"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0.0"
            android:id="@+id/txtRutaskmh"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="km/h"
            android:id="@+id/lblRutasKmH" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/linearLayout5"
        android:layout_alignRight="@+id/linearLayout2"
        android:layout_alignEnd="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ruta_activity_lbldistanprome"
            android:id="@+id/lblRutasVelProm"
            android:layout_gravity="bottom"
            android:textSize="15sp" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout8">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:text="@string/rutas_btn_showmap"
            android:id="@+id/btnShowMap"
            android:textSize="15sp"
            android:height="8dp"
            android:background="@color/greenDark"
            android:textColor="#ffffffff" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout6">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnStarRutas"
            android:background="@drawable/btnstar_circle"
            android:height="20dp"
            android:layout_below="@+id/linearLayout"
            android:layout_toRightOf="@+id/lblRutasDistancia"
            android:layout_toEndOf="@+id/lblRutasDistancia"
            android:width="20dp"
            android:text="@string/rutas_btn_iniciar"
            android:enabled="true"
            android:textColor="#ffffffff" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-45dp"
        android:visibility="visible"
        android:id="@+id/linearLayout9">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRutasStop"
            android:background="@drawable/btn_rutas_stop_default"
            android:height="20dp"
            android:visibility="invisible"
            android:layout_alignBottom="@+id/btnStarRutas"
            android:layout_alignLeft="@+id/btnStarRutas"
            android:layout_alignStart="@+id/btnStarRutas"
            android:text="@string/rutas_btn_stop"
            android:textColor="#ffffffff" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout8"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible"
        android:id="@+id/linearLayMapRoad">

        <fragment
            android:id="@+id/mapRutas"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="fill_parent"
            android:layout_height="350dp"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-45dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnEndTraceActivity"
            android:background="@drawable/btnstar_circle"
            android:visibility="invisible"
            android:onClick="verRuta"
            android:text="VER RUTA"
            android:textColor="#ffffffff" />
    </LinearLayout>

</RelativeLayout>
